# bspl

./: .gitignore  Cargo.toml  DESING_DECISIONS.md  README.md  Settings.toml  diesel.toml  docker-compose.yml  justfile
.config/: config.toml  nextest.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
.sqlx/: query-0ede733de05a14ca830aae76deb406ab5f968ab822b172e35a06639a53df3482.json  query-13217f548055f08e5635455f3c12f59b773cb731eb14602ea8426b6b39054aae.json  query-1aa1c04bbf3f11b6afdc1d0697831b960d8febb937865345309d4e63ee0a763e.json  query-281a805d1e061e158b2b3a481217277c761be5aed2a6b7ee097d9831052294b2.json  query-458a60695fcba39245df8d28030a3533d27b1a0bc21802e1eeeb66206843e6cb.json  query-88a31019d53d763155cd815f8ffa836e356351af9a04e50aafc6a3bb712347ca.json  query-982ebedb5f6fcfde7346f44b3ded47003c6a4a404b6e2ceaefab24eeba176590.json  query-b8ccac726e885e4bae2a0596e87cc88c5113c16e87c3bdec2ffb0e09e49cb29e.json
crates/data-api/: Cargo.toml
crates/data-api/examples/: get_income_stat.rs
crates/data-api/src/: client.rs  endpoint.rs  error.rs  lib.rs  model.rs
crates/data-api/src/endpoint/: income_stat.rs
crates/db/: Cargo.toml
crates/db/benches/: libsql.rs  postgres.rs
crates/db/examples/: create.rs  insert.rs
crates/db/src/: dart.rs  db.rs  entities.rs  error.rs  lib.rs  model.rs  schema.rs  smes.rs  test_utils.rs
crates/db/src/dart/: company_id.rs  filing.rs
crates/db/src/entities/: mock.rs  mod.rs
crates/db/src/entities/dart/: company_id.rs  filing.rs  mod.rs  prelude.rs
crates/db/src/entities/smes/: company.rs  html.rs  mod.rs  prelude.rs
crates/db/src/model/: dart.rs  smes.rs
crates/db/src/schema/: dart.rs  schema_dart.rs  schema_smes.rs  smes.rs
crates/db/src/smes/: company.rs  db.rs  html.rs  model.rs  utils.rs
crates/db/src/smes/company/: db.rs  libsql.rs  lisbsql.rs  model.rs  postgres.rs
crates/db/src/smes/html/: db.rs  libsql.rs  model.rs  postgres.rs  postres.rs
crates/db/src/test_utils/: libsql.rs  postgres.rs
crates/db/tests/resources/: list.json
crates/migration/: Cargo.toml
crates/migration/sql/: m20220101_000001_create_table_down.sql  m20220101_000001_create_table_up.sql
crates/migration/src/: m20220101_000001_create_table.rs
crates/model/: Cargo.toml
crates/model/src/: company.rs  db.rs  error.rs  lib.rs  macros.rs  statics.rs  table.rs  utils.rs
crates/runners/: Cargo.toml
crates/runners/src/: config.rs
crates/smes/: Cargo.toml
crates/smes/examples/: get_captcha_image.rs  get_company_list.rs  parse_html.rs  smes_base.rs  smes_get_captcha_image.rs
crates/smes/explore/: captcha.html  captcha.http  index.html  list.http
crates/smes/src/: api.rs  error.rs  header.rs  html.rs  lib.rs  list.rs  model.rs  parser.rs  utils.rs
crates/smes/src/api/: base.rs  bspl.rs  channel.rs  channels.rs  cookie.rs  header.rs  list.rs  model.rs  nopecha.rs
crates/smes/src/api/bspl/: api.rs  cookie.rs
crates/smes/src/api/channel/: captcha.rs
crates/smes/src/api/list/: api.rs  model.rs
crates/smes/src/api/nopecha/: api.rs  model.rs
crates/smes/src/captcha/: mod.rs  nopecha.rs
crates/smes/src/list/: api.rs
crates/smes/src/list/api/: header.rs  types.rs
crates/smes/src/parser/: table.rs  utils.rs
crates/smes/tests/: bspl_html.rs  html.rs  serde.rs
crates/smes/tests/resources/: searchVntrCmpDtls.html
crates/smes/tests/resources/golden/: smes-api-list-api-tests-list_api_make_request_should_succeed.json  smes-api-nopecha-api-tests-submit_captcha_should_get_nopecha_id.json  smes-api-nopecha-tests-submit_captcha_should_get_nopecha_id.json  smes-api-nopecha-tests-submit_challenge_should_get_nopecha_id.json  smes-list-api-tests-list_api_make_request_should_succeed.json
crates/smes/tests/resources/json/: list.json  list_fail.json
crates/tracing-setup/: Cargo.toml  lib.rs  setup.rs
crates/types/: Cargo.toml
crates/types/src/: base.rs  company.rs  dart_common.rs  date.rs  error.rs  filing.rs  lib.rs  table.rs  utils.rs
crates/utils/: Cargo.toml  error.rs  id.rs  lib.rs
migrations/: 1726673515_create-list-table.down.sql  1726673515_create-list-table.up.sql  1726673515_create-smes-company-table.down.sql  1726673515_create-smes-company-table.up.sql  1726673515_init.down.sql  1726673515_init.up.sql  20241016065908_init.down.sql  20241016065908_init.up.sql  schema.sql
migrations/2024-10-17-134707_init/: down.sql  up.sql
migrations/libsql/: 1726673515_init.up.sql
scripts/: backup_db.sh  backup_libsql_db.sh  backup_postgres_db.sh  backup_postgresql_db.sh
src/: config.rs
