[workspace]
members = ["crates/db", "crates/smes", "crates/utils", "crates/tracing-setup"]

[package]
name = "bspl"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
publish = false

[dependencies]
db = { workspace = true }
hashbrown = { workspace = true }
libsql = { workspace = true, features = ["core", "serde"] }
smes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-setup = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[workspace.dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bytes = "1.7.2"
chrono = "0.4.38"
chrono-tz = "0.10.0"
derive_builder = "0.20.1"
derive_more = "1.0.0"
hashbrown = "0.15.0"
image = "0.25.2"
libsql = { version = "0.6.0", default-features = false }
rand = "0.8.5"
reqwest = "0.12.7"
serde = "1.0.210"
serde-aux = "4.5.0"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = "0.18.1"

# Local crates
db = { path = "crates/db" }
smes = { path = "crates/smes" }
tracing-setup = { path = "crates/tracing-setup" }
utils = { path = "crates/utils" }

# Testig
fake = "2.10.0"
geni = "1.1.3"
goldrust = "0.1.7"
wiremock = "0.6.2"

# Benchmarks
criterion = "0.5.1"