[workspace]
members = ["crates/db", "crates/smes", "crates/utils", "crates/tracing-setup", "crates/model", "crates/data-api", "crates/runners"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
backon = "1.2.0"
base64 = "0.22.1"
bytes = "1.7.2"
cookie = "0.18.1"
derive_builder = "0.20.1"
derive_more = "1.0.0"
diesel = "2.2.4"
diesel_migrations = "2.2.0"
figment = "0.10.19"
hashbrown = "0.15.0"
image = "0.25.2"
minify-html = "0.15.0"
nutype = "0.5.0"
rand = "0.8.5"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = "1.0.210"
serde-aux = "4.5.0"
serde_json = "1.0.128"
static_assertions = "1.1.0"
thiserror = "1.0.63"
time = "0.3.36"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = "0.18.1"

# Local crates
db = { path = "crates/db" }
smes = { path = "crates/smes" }
tracing-setup = { path = "crates/tracing-setup" }
utils = { path = "crates/utils" }
model = { path = "crates/model" }

# Testig
fake = "2.10.0"
goldrust = "0.1.8"
testcontainers-modules = "0.11.2"
wiremock = "0.6.2"

# This is for CI
[target.x86_64-pc-windows-msvc.pq]
rustc-link-search = ["C:\\Program Files\\PostgreSQL\\14\\lib"]
rustc-link-lib = ["libpq"]