[package]
name = "db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive_more = { workspace = true, features = ["as_ref", "display", "from", "into"] }
diesel = { workspace = true, features = ["postgres", "r2d2", "time"] }
diesel-derive-newtype = { workspace = true }
diesel_migrations = { workspace = true }
fake = { workspace = true, features = ["time"] }
hashbrown = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
utils = { workspace = true }

# Workspace crates
types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tracing-setup = { workspace = true }