[package]
name = "model"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
fake = { workspace = true }
nutype = { workspace = true, features = ["serde"] }
serde = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }