[package]
name = "model"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = { workspace = true }
fake = { workspace = true }
nutype = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
static_assertions = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"] }
tracing = { workspace = true }


[dev-dependencies]
serde_json = { workspace = true }