[package]
name = "runners"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { workspace = true, features = ["toml"] }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }

# Local crates
db = { workspace = true }
types = { workspace = true }
smes = { workspace = true }
tracing-setup = { workspace = true }
utils = { workspace = true }