[package]
name = "smes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
backon = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
cookie = { workspace = true }
derive_builder = { workspace = true }
hashbrown = { workspace = true }
image = { workspace = true }
minify-html = { workspace = true, optional = true }
nutype = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scraper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-aux = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
utils = { workspace = true }

# Workspace crates
types = { workspace = true }
db = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
goldrust = { workspace = true, features = ["image"] }
rand = { workspace = true }
tracing-setup = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wiremock = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }