[package]
name = "types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive_more = { workspace = true, features = ["as_ref", "display", "from", "into"] }
diesel = { workspace = true }
diesel-derive-newtype = { workspace = true }
fake = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"] }